--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A compléter !</title>
+		<title>Les Films de Plein Air</title>
 		
 		<!--Metatags-->
 		<meta charset="utf-8">
