--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 		<link rel="stylesheet" href="css/stylescss.css">
 		<link rel="stylesheet"  href="webfonts/all.css">
 		
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ7K6484G4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GZ7K6484G4');
+</script>
+
 	</head>
 	<body data-spy="scroll" data-target="#booking">
 
