--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 						<!--<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air">-->
 					</aside>
 					<article class="col-lg-6">
-						<p>-Festival-</p>
+						<p>-Les Films de Plein Air-</p>
 						<div class="date">
-							<span>-Mois-</span>
-							<span class="textshadow">-Année-</span>
-							<span>-Edition-</span>
+							<span>-Août-</span>
+							<span class="textshadow">-2025-</span>
+							<span>-8ème Edition-</span>
 						</div>
-						<p>-Slogan-</p>
+						<p>-Explorez le monde, un film à la fois-</p>
 						<a href="films.html" class="btn btn-custom">-Programme-</a>
 					</article>
 				</div>
@@ -103,8 +103,8 @@
 			<div class="container">
 				<div class="row">
 					<article class="col-lg-6">
-						<h2 id="about">-Titre-</h2>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						<h2 id="about">-A propos de notre festival-</h2>
+						<p>Chaque été, du 5 au 7 août, le Festival des Films de Plein Air transforme le parc Monceau en un cinéma sous les étoiles. Organisé par l'association Les Films de Plein Air, cet événement gratuit met à l'honneur des films d'auteur autour d’un thème spécifique. Cette année, le voyage est à l'honneur, invitant le public à explorer le monde à travers le prisme du cinéma.
                         </p>
 						<a href="#booking" class="btn btn-custom"> Je réserve !</a>
 					</article>
