--- a/index.html
+++ b/index.html
@@ -144,43 +144,43 @@
 					<!--<div class="col-12 col-sm-4 col-md2 imgResponsive">
 						<a href="#"><img src="images/01lesFiguresDeLombre.png"></a>
 					</div>-->
-					<div class="col-12"><h2 id="movie">-Titre-</h2></div>
+					<div class="col-12"><h2 id="movie">-Notre sélection de films-</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film"></a>
+						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film Will and Harper"></a>
 						
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="affiche du film  American Honey"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="affiche du film Compartiment numéro 6"></a>
 					</div>
 					<div class=" col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="affiche du film La traversée"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="affiche du film Viet and Nam"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="affiche du film Le royaume"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="affiche du film Se souvenir d'une ville"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="affiche du film E.1027"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt=""></a>
+						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="affiche du film L'histoire de Souleyman"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="affiche du film La chimère"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt=""></a>
+						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="affiche du film Perfect Days"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="affiche du film Nomadland"></a>
 					</div>
 				</div>
 			</div>
