--- a/films.html
+++ b/films.html
@@ -25,6 +25,16 @@
 	<!--<link rel="stylesheet" href="css/style.css">-->
 	<link rel="stylesheet" href="css/stylescss.css">
 	<link rel="stylesheet"  href="webfonts/all.css">
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ7K6484G4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GZ7K6484G4');
+</script>
 	
 </head>
 <body>
@@ -51,7 +61,7 @@
     
 	
 	<div class="jumbotron text-center">
-		<span >-Bandeau informations-</span>
+		<span >-Documentaires et films inspirés de faits réels-</span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -139,7 +149,7 @@
 	</section>
 
 	<div class="jumbotron text-center">
-		<span> -Bandeau informations- </span>
+		<span> -Films d’aventure- </span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -232,7 +242,7 @@
 	</section>
 	
 	<div class="jumbotron text-center">
-		<span >-Bandeau informations-</span>
+		<span >-Films à thématique sociale-</span>
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
@@ -325,7 +335,7 @@
 	</section>
 
 	<div class="jumbotron text-center">
-			<span >-Bandeau informations-</span>
+			<span >-Films de fiction dramatique-</span>
 		</div>
 		<section class="container-fluid filmlist">
 			<div class="container">
