--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,14 @@
 	<link rel="stylesheet" href="css/stylescss.css">
 	<link rel="stylesheet"  href="webfonts/all.css">
 	
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ7K6484G4"></script> 
+<script>
+	window.dataLayer = window.dataLayer || []; 
+	function gtag(){dataLayer.push(arguments);} 
+	gtag('js', new Date()); 
+
+	gtag('config', 'G-GZ7K6484G4'); 
+</script> 
 
 
 </head>
@@ -58,23 +66,23 @@
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/01-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
+                        <h5 class="card-title">-Film Coup de Cœur-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <p class="card-text">Chaque année, le Festival des Films de Plein Air met en avant un film coup de cœur qui incarne à la perfection son thème annuel. Pour cette édition consacrée au voyage,</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/02-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
+                        <h5 class="card-title">-Anecdotes Insolites sur "Will & Harper"-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <p class="card-text">**Une scène improvisée** : L'une des scènes les plus marquantes, où les protagonistes campent sous un ciel étoilé, n'était pas prévue ! Une tempête ayant détruit le décor initial, l'équipe a filmé sur place, capturant un moment d'une authenticité rare</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/01-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/03-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Titre-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
@@ -83,7 +91,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/01-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/04-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Titre-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
@@ -92,7 +100,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/02-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/05-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Titre-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
@@ -101,7 +109,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/01-actu.jpg" alt="">
+                    <img class="card-img-top" src="images/06-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Titre-</h5>
                         <p class="infoBlog">-Info- | Par Jennifer Viala</p>
