--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                     <img class="card-img-top" src="images/01-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Film Coup de Cœur-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
+                        <p class="infoBlog">-Info- | Par Antoine Bergera</p>
                         <p class="card-text">Chaque année, le Festival des Films de Plein Air met en avant un film coup de cœur qui incarne à la perfection son thème annuel. Pour cette édition consacrée au voyage,</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
@@ -76,44 +76,44 @@
                     <img class="card-img-top" src="images/02-actu.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-title">-Anecdotes Insolites sur "Will & Harper"-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">**Une scène improvisée** : L'une des scènes les plus marquantes, où les protagonistes campent sous un ciel étoilé, n'était pas prévue ! Une tempête ayant détruit le décor initial, l'équipe a filmé sur place, capturant un moment d'une authenticité rare</p>
+                        <p class="infoBlog">-Info- | Par Camille Rochefort</p>
+                        <p class="card-text">**Une scène improvisée** : L'une des scènes les plus marquantes, où les protagonistes campent sous un ciel étoilé, n'était pas prévue !</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/03-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <h5 class="card-title">-Les Engagements Écologiques-</h5>
+                        <p class="infoBlog">-Info- | Par Julien Morel</p>
+                        <p class="card-text">Le Festival des Films de Plein Air ne se contente pas de projeter des films engagés, il met en place une politique</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/04-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <h5 class="card-title">-Interview Exclusive de Jennifer Vialet-</h5>
+                        <p class="infoBlog">-Info- | Par Sophie Lemaitre</p>
+                        <p class="card-text">créatrice du festival, nous parle de son engagement et de sa passion pour le cinéma en plein air.</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/05-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <h5 class="card-title">-Ce Que Vous Pensez du festival-</h5>
+                        <p class="infoBlog">-Info- | Par Victor Delaunay</p>
+                        <p class="card-text">Chaque année, le festival attire des spectateurs fidèles et curieux. Voici quelques réactions</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/06-actu.jpg" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">-Titre-</h5>
-                        <p class="infoBlog">-Info- | Par Jennifer Viala</p>
-                        <p class="card-text">In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit</p>
+                        <h5 class="card-title">-Rétrospective-</h5>
+                        <p class="infoBlog">-Info- | Par Élodie Marchand</p>
+                        <p class="card-text">Vos Films Préférés des 7 dernières éditions. Depuis sa création, le festival a présenté des œuvres marquantes.</p>
                         <a href="article.html" class="btn btn-custom">Voir l'article</a>
                     </div>
                 </div>
