--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
 						<!--<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">-->
 					</aside>
 					<article class="col-lg-6">
-						<h2 id="news">-Titre-</h2>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						<h2 id="news">-Nos actualités-</h2>
+						<p>Ne manquez rien des actualités du Festival des Films de Plein Air ! 
+
+							Le festival bat son plein au parc Monceau, et cette édition sur le thème du voyage nous réserve encore bien des surprises ! Entre projections sous les étoiles, rencontres avec les réalisateurs et engagements écoresponsables, l’événement séduit un public toujours plus nombreux. Découvrez dès maintenant notre dernier article exclusif et plongez dans les coulisses du film "Will & Harper", un road-trip captivant ponctué d’anecdotes insolites !</p>
 
 						<p>-Lien possible-<a href="#">ici</a>.</p>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit </p>
+						<p>Parcourez notre site et découvrez notre festival </p>
 						<a href="rendez-vous-le-05-aout.html" class="btn btn-custom">Lire la suite</a>
 					</article>
 				</div>
