--- a/films.html
+++ b/films.html
@@ -68,9 +68,9 @@
 			<div class="row film01">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-Will & Harper-</h2>
+					<h3>-Lundi 4 août à 22h-</h3>
+					<h3>-Voyage, amitié et défis-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -78,13 +78,13 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit<p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span>
-						<br><span>Nationalité</span>
+					<p>Will & Harper est un documentaire qui suit l'acteur Will Ferrell et son ami de longue date, la scénariste Harper Steele, récemment devenue femme transgenre, lors d'un road trip de 17 jours à travers les États-Unis. Ce voyage explore leur amitié de trente ans, les défis de la transition de Harper et les réalités de l'Amérique contemporaine.<p>
+						<span>27 septembre 2024</span>
+						<br><span>114 minutes</span>
+						<br><span>De Josh Greenbaum</span>
+						<br><span>Avec Will Ferrell et Harper Steel</span>
+						<br><span>Genre : Film documentaire</span>
+						<br><span>Nationalité : Américain</span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -92,9 +92,9 @@
 			</div>
 			<div class="row film02">
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-American Honey-</h2>
+					<h3>-Lundi 4 août à minuit-</h3>
+					<h3>-Poétique quête de liberté dans le Midwest américain-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -102,14 +102,14 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit<p>
+					<p>American Honey raconte l'histoire de Star, une adolescente de 17 ans issue d'un milieu défavorisé, qui rejoint un groupe de jeunes voyageant à travers le Midwest américain pour vendre des abonnements à des magazines. Ce road trip est ponctué de fêtes, d'escroqueries et de découvertes, offrant à Star une quête de liberté et d'amour, notamment avec Jake, un membre charismatique mais dangereux du groupe.<p>
 
-							<span>Date de sortie</span>
-							<br><span>Durée</span>
-							<br><span>De</span>
-							<br><span>Avec</span>
-							<br><span>Genres</span>
-							<br><span>Nationalité</span>
+							<span>8 février 2017</span>
+							<br><span>163 minutes</span>
+							<br><span>De Andrea Arnold</span>
+							<br><span>Avec Sasha Lane et Shia LeBoeuf</span>
+							<br><span>Genre : Drame</span>
+							<br><span>Nationalité : Américano-Britanique</span>
 						</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -119,9 +119,9 @@
 			<div class="row film03">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-Compartiment n°6-</h2>
+					<h3>-Mardi 5 août à 22h-</h3>
+					<h3>-Voyage et histoire d'amour impossible-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -129,16 +129,14 @@
 						<i class="far fa-star"></i>
 						<i class="far fa-star"></i>
 					</div>
-					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
-                    </p>
+					<p>	Compartiment n°6 raconte l'histoire de Laura, une étudiante finlandaise en archéologie, qui entreprend un voyage en train de Moscou à Mourmansk pour voir des pétroglyphes. Elle est contrainte de partager son compartiment avec Ljoha, un mineur russe. Au fil du trajet, une relation inattendue se développe entre ces deux étrangers que tout oppose.</p>
                     <p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span>
-						<br><span>Nationalité</span>
+						<span>3 novembre 2021</span>
+						<br><span>107 minutes/span>
+						<br><span>De Juho Kuosmanen</span>
+						<br><span>Avec Seidi Haarla et Iouri Borissov</span>
+						<br><span>Genre : Drame</span>
+						<br><span>Nationalité : Russe</span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -430,53 +428,53 @@
 	<!--07.footer-->
 	<footer class="container-fluid footer">
 		<div class="container py-3">
-            <div class="row">
-                <div class="col-12 col-md-3">
-                    <h2>Liens utiles</h2>
-                    <div class="footerLinks">
-                        <a href="index.html">Accueil</a>
-                        <a href="films.html">Les Films</a>
-                        <a href="blog.html">Actualités</a>
-                        <a href="contact.html">Contact</a>
-                        <a href="mentions-legales.html">Mentions légales</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 address">
-                    <h2>Contactez-nous</h2>
-                    <div class="contactIcons mb-3">
-                        <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                        <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                        <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 partenaire">
-                    <h2>Partenariat</h2>
-                    <div class="contactIcons mb-3">
-                        <ul>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 2-</li>
-                            <li>-Partenaire 3-</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 social">
-                    <h2>Suivez-nous !</h2>
-                    <div class="socialicons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>	
-        </div>
-        <div class="socketBkg ">
-            <div class="socket text-center">
-                <p>Copyright - Site réalisé par <br>
-                    Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
-            </div>
-        </div>
-		</footer>
-		<!--end footer-->
+			<div class="row">
+				<div class="col-12 col-md-3">
+					<h2>Liens utiles</h2>
+					<div class="footerLinks">
+						<a href="index.html">Accueil</a>
+						<a href="films.html">Les Films</a>
+						<a href="blog.html">Actualités</a>
+						<a href="contact.html">Contact</a>
+						<a href="mentions-legales.html">Mentions légales</a>
+					</div>
+				</div>
+				<div class="col-12 col-md-3 address">
+					<h2>Contactez-nous</h2>
+					<div class="contactIcons mb-3">
+						<p><span class="pr-3"><i class="fas fa-home"></i></span>-Parc Monceau-</p>
+						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>-lesfilmsdepleinair@gmail.com-</p>
+						<p><span class="pr-3"><i class="fas fa-phone"></i></span>-0144730280-</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-3 partenaire">
+					<h2>Partenariat</h2>
+					<div class="contactIcons mb-3">
+						<ul>
+							<li>-Marie de Paris-</li>
+							<li>-Régions île de France-</li>
+							<li>-France télévision-</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-12 col-md-3 social">
+					<h2>Suivez-nous !</h2>
+					<div class="socialicons">
+						<a href="#"><i class="fab fa-facebook-f"></i></a>
+						<a href="#"><i class="fab fa-youtube"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+					</div>
+				</div>
+			</div>	
+		</div>
+		<div class="socketBkg ">
+			<div class="socket text-center">
+				<p>Copyright - Site réalisé par Clara & Lorette <br>
+					Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
+			</div>
+		</div>
+	</footer>
+	<!--end footer-->
 
 	<!--Scroll to top button-->
 	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-chevron-up"></i></button>
