--- a/index.html
+++ b/index.html
@@ -324,18 +324,18 @@
                     <div class="col-12 col-md-3 address">
                         <h2>Contactez-nous</h2>
                         <div class="contactIcons mb-3">
-                            <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                            <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                            <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
+                            <p><span class="pr-3"><i class="fas fa-home"></i></span>-Parc Monceau-</p>
+                            <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-lesfilmsdepleinair@gmail.com-</p>
+                            <p><span class="pr-3"><i class="fas fa-phone"></i></span>-0144730280-</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 partenaire">
                         <h2>Partenariat</h2>
                         <div class="contactIcons mb-3">
                             <ul>
-                                <li>-Partenaire 1-</li>
-                                <li>-Partenaire 2-</li>
-                                <li>-Partenaire 3-</li>
+                                <li>-Marie de Paris-</li>
+                                <li>-Régions île de France-</li>
+                                <li>-France télévision-</li>
                             </ul>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
             </div>
             <div class="socketBkg ">
                 <div class="socket text-center">
-                    <p>Copyright - Site réalisé par <br>
+                    <p>Copyright - Site réalisé par Clara & Lorette <br>
                         Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
                 </div>
             </div>
