--- a/films.html
+++ b/films.html
@@ -154,9 +154,9 @@
 			<div class="row film04">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-La Traversée-</h2>
+					<h3>-Mardi 5 août à 23h30-</h3>
+					<h3>-Aventure en mer et leçon de vie-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -165,15 +165,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						La Traversée est une comédie qui raconte l’aventure de Alex et Stéphanie, éducateurs de quartier, emmènent cinq adolescents déscolarisés pour une traversée de la Méditerranée visant leur réinsertion. Leur skipper, Riton, ancien policier de la BAC, se montre hostile à cette initiative, rendant le voyage mouvementé. ​
                     </p>
 					<p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span> 
-						<br><span>Nationalité</span>
+						<span>29 juin 2022</span>
+						<br><span>109 minutes</span>
+						<br><span>De Varante Soudjian</span>
+						<br><span>Avec Alban Ivanov et Lucien Jean-Baptiste</span>
+						<br><span>Genre : Comédie </span> 
+						<br><span>Nationalité : Française</span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -181,9 +181,9 @@
 			</div>
 			<div class="row film05">
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-Viêt and Nam-</h2>
+					<h3>-Mardi 5 août à minuit-</h3>
+					<h3>-Voyage et défis du passé-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -192,15 +192,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Viêt and Nam est un drame romantique qui suit Nam et Viêt, deux jeunes mineurs de charbon vietnamiens amoureux, travaillant dans des conditions périlleuses. Alors que Nam envisage d'émigrer clandestinement pour une vie meilleure, le couple entreprend un voyage à travers le pays pour retrouver les restes du père de Nam, disparu pendant la guerre. Ce périple les confronte aux cicatrices du passé et aux incertitudes de l’avenir.
                     </p>
 					<p>
-							<span>Date de sortie</span>
-							<br><span>Durée</span>
-							<br><span>De</span>
-							<br><span>Avec</span>
-							<br><span>Genres</span>
-							<br><span>Nationalité</span>
+							<span>2 octobre 2024</span>
+							<br><span>129 minutes</span>
+							<br><span>De Truong Minh Quy</span>
+							<br><span>Avec Thanh Hai Phan et Tuy Bao Dinh</span>
+							<br><span>Genre : Drame romantique</span>
+							<br><span>Nationalité : Vietnamienne</span>
 						</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -210,9 +210,9 @@
 			<div class="row film06">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-Mon Royaume-</h2>
+					<h3>-Mercredi 6 août à 21h30-</h3>
+					<h3>-Partez à l'aventure dans la Corse des années 90-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -221,15 +221,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						Mon Royaume est un thriller dramatique se déroulant en Corse en 1995. Lesia, une adolescente de 15 ans, retrouve son père en cavale après une tentative d'assassinat ratée. Ensemble, ils fuient à travers l'île, confrontés à la violence des guerres de clans, tout en cherchant à renforcer leur relation père-fille.
                     </p>
 					<p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span>
-						<br><span>Nationalité</span>
+						<span>13 novembre 2024</span>
+						<br><span>108 minutes</span>
+						<br><span>De Julien Colonna</span>
+						<br><span>Avec Ghjuvanna Benedetti et Saveriu Santucci</span>
+						<br><span>Genre : Thriller</span>
+						<br><span>Nationalité : Français </span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
