--- a/films.html
+++ b/films.html
@@ -247,9 +247,9 @@
 			<div class="row film07">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-Se souvenir d'une ville-</h2>
+					<h3>-Lundi 4 août à 23h-</h3>
+					<h3>-Sarajevo et guerre : entre résilience et découverte-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -258,15 +258,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
-                    </p>
+						Se souvenir d'une ville  explore le siège de Sarajevo (1992-1996) à travers des images tournées par de jeunes cinéastes locaux qui, en pleine guerre, ont utilisé leurs caméras pour témoigner de la violence environnante. Trente ans plus tard, ces réalisateurs reviennent sur leurs expériences, partageant leurs réflexions sur le rôle du cinéma comme moyen de survie et de résistance.
+					</p>
 					<p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span>
-						<br><span>Nationalité</span>
+						<span>13 novembre 2024</span>
+						<br><span>108 minutes</span>
+						<br><span>De Jean-Gabriel Periot</span>
+						<br><span>Avec divers témoignages d'anonymes</span>
+						<br><span>Genre : Documentaire</span>
+						<br><span>Nationalité : Franco-Suisse</span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -274,9 +274,9 @@
 			</div>
 			<div class="row film08">
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-E.1027-</h2>
+					<h3>-Lundi 4 août à 21h-</h3>
+					<h3>-Découvrez l'histoire de l'architecte irlandaise Eileen Gray-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -285,15 +285,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						E.1027 ou Eileen Gray and the House by the Sea est un docu-fiction qui retrace la création par la designer irlandaise Eileen Gray de la villa E.1027 sur la Côte d'Azur en 1929, une œuvre avant-gardiste. Il explore également la relation complexe entre Gray et l'architecte Le Corbusier, qui, fasciné par la maison, y a ajouté des fresques sans son consentement, soulevant des questions sur la reconnaissance et l'appropriation dans le monde de l'architecture
                     </p>
 					<p>
-							<span>Date de sortie</span>
-							<br><span>Durée</span>
-							<br><span>De</span>
-							<br><span>Avec</span>
-							<br><span>Genres</span>
-							<br><span>Nationalité</span>
+							<span>13 novembre 2024</span>
+							<br><span>89 minutes</span>
+							<br><span>De Béatrice Meinger</span>
+							<br><span>Avec Axel Moustache et Natalie Radmall-Quirke</span>
+							<br><span>Genre : Documentaire</span>
+							<br><span>Suisse</span>
 						</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -303,9 +303,9 @@
 			<div class="row film09">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
-					<h2>-Titre-</h2>
-					<h3>-Séance-</h3>
-					<h3>-Info.-</h3>
+					<h2>-L'Histoire de Souleymane -</h2>
+					<h3>-Mardi 5 août à 22h-</h3>
+					<h3>-Histoire vraie de Souleymane-</h3>
 					<div class="note">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -314,15 +314,15 @@
 						<i class="far fa-star"></i>
 					</div>
 					<p>
-						In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						L'Histoire de Souleymane  est un film qui suit Souleymane, un jeune Guinéen sans papiers travaillant comme livreur à vélo dans Paris, qui prépare son entretien crucial pour obtenir l'asile. Tiraillé entre la nécessité de survivre et la pression de présenter une histoire convaincante aux autorités, il navigue dans un quotidien précaire où chaque choix peut déterminer son avenir.
                     </p>
 					<p>
-						<span>Date de sortie</span>
-						<br><span>Durée</span>
-						<br><span>De</span>
-						<br><span>Avec</span>
-						<br><span>Genres</span>
-						<br><span>Nationalité</span>
+						<span>9 octobre 2024</span>
+						<br><span>93 minutes</span>
+						<br><span>De Boris Lojkine</span>
+						<br><span>Avec Abou Sangaré et Nina Meurisse</span>
+						<br><span>Genre : Drame</span>
+						<br><span>Nationalité : Française</span>
 					</p>
 					<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 					<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -340,9 +340,9 @@
 				<div class="row film10">
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
-						<h2>-Titre-</h2>
-					    <h3>-Séance-</h3>
-					    <h3>-Info.-</h3>
+						<h2>-La Chimère-</h2>
+					    <h3>-Mercredi 6 août à 22h-</h3>
+					    <h3>-Amour et trésors perdus-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
@@ -351,15 +351,15 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+                            La Chimère, son histoire se déroule dans l'Italie des années 1980, le film suit Arthur, un archéologue britannique doté d'un don pour localiser les tombes étrusques, qui s'associe à une bande de pilleurs de sépultures pour déterrer des artefacts anciens. Tout en recherchant ces trésors, Arthur est hanté par le souvenir de son amour perdu, Beniamina, et aspire à la retrouver. Le film explore les thèmes de la quête, de la perte et de la connexion entre le passé et le présent.
                         </p>
 						<p>
-							<span>Date de sortie</span>
-							<br><span>Durée</span>
-							<br><span>De</span>
-							<br><span>Avec</span>
-							<br><span>Genres</span>
-							<br><span>Nationalité</span>
+							<span>26 mai 2023</span>
+							<br><span>120 minutes</span>
+							<br><span>De Adisson Rohrwacher</span>
+							<br><span>Avec Josh O'Connor et Carol Duarte</span>
+							<br><span>Genre : Comédie dramatique</span>
+							<br><span>Nationalité : Italien</span>
 						</p>
 						<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 						<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -367,9 +367,9 @@
 				</div>
 				<div class="row film11">
 					<article class="col-sm-8">
-						<h2>-Titre-</h2>
-					    <h3>-Séance-</h3>
-					    <h3>-Info.-</h3>
+						<h2>-Perfect Days-</h2>
+					    <h3>-Mercredi 6 août à minuit-</h3>
+					    <h3>-Rencontres inattendues à Tokyo-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
@@ -378,15 +378,15 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+                            Perfect Days  est un film qui suit Hirayama, un homme d'une soixantaine d'années qui nettoie les toilettes publiques du quartier de Shibuya à Tokyo. Sa routine quotidienne est ponctuée de moments simples mais significatifs, tels que l'écoute de musique rock, la photographie de la nature et des interactions occasionnelles avec des connaissances. Le film a été salué pour sa représentation poétique de la beauté dans la vie quotidienne et a valu à Yakusho le prix d'interprétation masculine au Festival de Cannes 2023
                         </p>
 						<p>
-								<span>Date de sortie</span>
-								<br><span>Durée</span>
-								<br><span>De</span>
-								<br><span>Avec</span>
-								<br><span>Genres</span>
-								<br><span>Nationalité</span>
+								<span>8 mai 2023</span>
+								<br><span>124 minutes</span>
+								<br><span>De Wim Wenders</span>
+								<br><span>Avec Koji Yakusho et Arisa Nakano</span>
+								<br><span>Genre : Drame</span>
+								<br><span>Nationalité : Germano-Japonnais</span>
 							</p>
 						<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 						<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
@@ -396,9 +396,9 @@
 				<div class="row film12">
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
-						<h2>-Titre-</h2>
-					    <h3>-Séance-</h3>
-					    <h3>-Info.-</h3>
+						<h2>-Nomadland-</h2>
+					    <h3>-Mardi 5 août à 19h-</h3>
+					    <h3>-Survivre au deuil en changeant de vie-</h3>
 						<div class="note">
 							<i class="fas fa-star"></i>
 							<i class="fas fa-star"></i>
@@ -407,15 +407,15 @@
 							<i class="far fa-star"></i>
 						</div>
 						<p>
-                            In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+                            Nomadland  est un film qui suit l’histoire de Fern, une femme d'une soixantaine d'années qui, après avoir perdu son emploi et son mari lors de la Grande Récession, adopte un mode de vie nomade à travers l'Ouest américain. Voyageant dans son van, elle effectue divers petits boulots saisonniers et rencontre d'autres nomades modernes, explorant des thèmes de résilience et de communauté. 
                         </p>
 						<p>
-							<span>Date de sortie</span>
-							<br><span>Durée</span>
-							<br><span>De</span>
-							<br><span>Avec</span>
-							<br><span>Genres</span>
-							<br><span>Nationalité</span>
+							<span>19 février 2021</span>
+							<br><span>108 minutes</span>
+							<br><span>De Clhoé Zhao</span>
+							<br><span>Avec Frances McDormand et David Strathairm</span>
+							<br><span>Genre : Drame</span>
+							<br><span>Nationalité : Américain</span>
 						</p>
 						<a href="index.html#booking" class="btn btn-custom">Je réserve !</a>
 						<a href="" target="_blank" class="btn btn-custom allocine">En savoir +</a>
