--- a/article.html
+++ b/article.html
@@ -73,7 +73,7 @@
     </div>
     <!--end Article-->
 
-	<!--07.footer-->
+	<<!--07.footer-->
 	<footer class="container-fluid footer">
 		<div class="container py-3">
 			<div class="row">
@@ -90,22 +90,22 @@
 				<div class="col-12 col-md-3 address">
 					<h2>Contactez-nous</h2>
 					<div class="contactIcons mb-3">
-                        <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                        <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                        <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
-                    </div>
+						<p><span class="pr-3"><i class="fas fa-home"></i></span>-Parc Monceau-</p>
+						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>-lesfilmsdepleinair@gmail.com-</p>
+						<p><span class="pr-3"><i class="fas fa-phone"></i></span>-0144730280-</p>
+					</div>
 				</div>
 				<div class="col-12 col-md-3 partenaire">
 					<h2>Partenariat</h2>
 					<div class="contactIcons mb-3">
-                        <ul>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 1-</li>
-                        </ul>
+						<ul>
+							<li>-Marie de Paris-</li>
+							<li>-Régions île de France-</li>
+							<li>-France télévision-</li>
+						</ul>
 					</div>
 				</div>
-                <div class="col-12 col-md-3 social">
+				<div class="col-12 col-md-3 social">
 					<h2>Suivez-nous !</h2>
 					<div class="socialicons">
 						<a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -116,11 +116,11 @@
 			</div>	
 		</div>
 		<div class="socketBkg ">
-            <div class="socket text-center">
-                <p>Copyright - Site réalisé par <br>
-                    Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
-            </div>
-        </div>
+			<div class="socket text-center">
+				<p>Copyright - Site réalisé par Clara & Lorette <br>
+					Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
+			</div>
+		</div>
 	</footer>
 	<!--end footer-->
 
