--- a/contact.html
+++ b/contact.html
@@ -98,13 +98,13 @@
 				<div class="col-sm-12 col-md-6 address">
 					<h2>D'autres moyens de nous contacter</h2>
 					<div class="contactIcons mb-3">
-						<p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-						<p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
+						<p><span class="pr-3"><i class="fas fa-home"></i></span>Parc Monceau, Paris</p>
+						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>lesfilmsdepleinair@gmail.com</p>
+						<p><span class="pr-3"><i class="fas fa-phone"></i></span>0144730280</p>
 					</div>
 					<h2>Accueil téléphonique</h2>
 					<p>
-						- A compléter.... -
+						Vous pouvez nous contacter du lundi au vendredi aux horaires suivantes : 9h00-12h00 et 14h00-18h00
 					</p>
 					<div class="banContact"><img src="images/BanContact.jpg" alt=""></div>
 				</div>
