--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<!--<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">-->
+						<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="news">-Nos actualités-</h2>
@@ -194,7 +194,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<!--<img src="images/05-resaAside.jpg"class="img-fluid" alt="cinema clap">-->
+						<!--<img src="images/05-resaAside.jpg"class="img-fluid" alt="image avec écrit Newsletter dessus">-->
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="booking">Réservation en ligne</h2>
